# nasin

./: .gitignore  Cargo.toml  README.md  default.nix  flake.nix  me.jonot.Nasin.json
data/: me.jonot.Nasin.desktop
src/: main.rs  scheduler.rs
